<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/playAudioBtn"
        android:title="@string/play_audio"
        app:showAsAction="never"
        android:enabled="true">
    </item>

    <item
        android:id="@+id/stopAudioBtn"
        android:title="@string/stop_playing_audio"
        app:showAsAction="never"
        android:enabled="false"
        android:visible="false">
    </item>

    <item
        android:id="@+id/sttBtn"
        android:title="@string/search_using_voice"
        app:showAsAction="never">
    </item>

    <item
        android:id="@+id/translateBtn"
        android:title="@string/translate"
        app:showAsAction="never">
    </item>

</menu>